# scarus

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-please.yml  rust.yml
src/: main.rs
src/common/: mod.rs
src/seqvars/: mod.rs
src/strucvars/: ds.rs  mod.rs
src/strucvars/data/: decipher_hi.rs  hgnc.rs  intervals.rs  mod.rs
src/strucvars/data/clingen_dosage/: io.rs  mod.rs
src/strucvars/data/clingen_dosage/snapshots/: scarus__strucvars__data__clingen_dosage__io__test__load_clingen_genes_file_grch37.snap  scarus__strucvars__data__clingen_dosage__io__test__load_clingen_regions_file_grch37.snap  scarus__strucvars__data__clingen_dosage__io__test__load_clingen_regions_file_grch38.snap
src/strucvars/data/gnomad/: io.rs  mod.rs
src/strucvars/data/gnomad/snapshots/: scarus__strucvars__data__gnomad__io__test__load_file.snap  scarus__strucvars__data__gnomad__test__data_load.snap  scarus__strucvars__data__gnomad__test__load_file.snap
src/strucvars/data/snapshots/: scarus__strucvars__data__decipher_hi__test__data_load.snap  scarus__strucvars__data__hgnc__test__gene_id_data.snap  scarus__strucvars__data__hgnc__test__load_file.snap
src/strucvars/eval/: common.rs  mod.rs  result.rs
src/strucvars/eval/del/: mod.rs  result.rs  section1.rs  section2.rs  section3.rs  section4.rs
src/strucvars/eval/del/snapshots/: scarus__strucvars__eval__del__section1__test__evaluate_l1a@gene-RERE.snap  scarus__strucvars__eval__del__section1__test__evaluate_l1a@no-gene.snap  (+76 more)
src/strucvars/eval/dup/: mod.rs  result.rs  section1.rs  section2.rs  section3.rs  section4.rs
src/strucvars/eval/snapshots/: scarus__strucvars__eval__test__clingen_overlaps@ISCA-46311-contained-in-2.snap  scarus__strucvars__eval__test__clingen_overlaps@ISCA-46311-left-of.snap  scarus__strucvars__eval__test__clingen_overlaps@gene-abcd1-2.snap  scarus__strucvars__eval__test__clingen_overlaps@gene-abcd1.snap  scarus__strucvars__eval__test__clingen_overlaps@region-match-2.snap  scarus__strucvars__eval__test__clingen_overlaps@region-match.snap  scarus__strucvars__eval__test__clinvar_sv_overlaps@VCV000007063.snap  scarus__strucvars__eval__test__clinvar_sv_overlaps@almost-empty.snap  scarus__strucvars__eval__test__functional_overlaps@chr1-example.snap  scarus__strucvars__eval__test__functional_overlaps@chr20-example.snap  scarus__strucvars__eval__test__gnomad_sv_overlaps@chr10-51620321-51748701-NFE.snap  scarus__strucvars__eval__test__gnomad_sv_overlaps@chr10-92994-95183-NFE.snap  scarus__strucvars__eval__test__gnomad_sv_overlaps@gnomAD-SV_v2.1_DEL_1_.snap  scarus__strucvars__eval__test__gnomad_sv_overlaps@gnomAD-SV_v2.1_DUP_1_6.snap  scarus__strucvars__eval__test__overlapping_elements.snap  scarus__strucvars__eval__test__query_gene@HGNC:18443.snap  scarus__strucvars__eval__test__query_gene@HGNC:2400.snap
src/strucvars/snapshots/: scarus__strucvars__ds__test__sv_from_str@DEL-1-1000-2000.snap  scarus__strucvars__ds__test__sv_from_str@DUP-1-1000-2000.snap
tests/data/: README.md  hgnc.tsv
tests/data/strucvars/: ClinGen_gene_curation_list_GRCh37.tsv  ClinGen_region_curation_list_GRCh37.tsv  ClinGen_region_curation_list_GRCh38.tsv  README.md  bootstrap.sh  decipher_hi_prediction.tsv  gnomad_constraints.tsv  txs_example_hi.bin.zst  txs_example_hi.bin.zst.report
tests/data/strucvars/clinvar/: regions.bed
tests/data/strucvars/hi/: README.md  bootstrap.sh  tx-mane.tsv  txs_example_hi.bin.zst.report
tests/data/strucvars/hi_ts/: README.md  bootstrap.sh  txs_example_hi.bin.zst  txs_example_hi.bin.zst.report
tests/data/strucvars/mehari/: txs_example_hi.bin.zst  txs_example_hi.bin.zst.report
tests/data/strucvars/rec/: README.md
tests/data/strucvars/ts/: README.md
utils/terraform/: main.tf
(+153 files in other folders)
