[package]
name = "scarus"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Automated evaluation of ACMG rules"
license = "MIT"
homepage = "https://github.com/bihealth/scarus"
readme = "README.md"

[[bin]]
name = "scarus"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap-verbosity-flag = "2.0"
clap = { version = "4.4", features = ["derive", "help"] }
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.33", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
anyhow = "1.0"
clap-verbosity-flag = {version = "2.0"}
clap = { version = "4.1", features = ["derive", "env"] }
env_logger = "0.10"
pretty_assertions = "1.3"
temp_testdir = "0.2"
test-log = "0.2"
tracing-subscriber = {version = "0.3" }
