[package]
name = "scarus"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Automated evaluation of ACMG rules"
license = "MIT"
homepage = "https://github.com/bihealth/scarus"
readme = "README.md"

[[bin]]
name = "scarus"
path = "src/main.rs"

[dependencies]
annonars = "0.31.0"
anyhow = "1.0"
bio = "1.4"
biocommons-bioutils = "0.1.4"
clap-verbosity-flag = "2.0"
clap = { version = "4.4", features = ["derive", "help"] }
csv = "1.3"
displaydoc = "0.2.4"
hgvs = "0.14.1"
itertools = "0.12.0"
log = "0.4"
mehari = "0.21.0"
prost = "0.12.1"
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
rustc-hash = "1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }
serde_with = { version = "3.3", features=["alloc", "macros", "indexmap_2"], default-features = false }
thiserror = "1.0"
tokio = { version = "1.33", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
intervals-general = "0.1.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"

[dev-dependencies]
anyhow = "1.0"
assert-eq-float = "0.1.3"
clap-verbosity-flag = {version = "2.0"}
clap = { version = "4.1", features = ["derive", "env"] }
env_logger = "0.10"
insta = { version = "1.34", features = ["yaml"] }
pretty_assertions = "1.3"
rstest = "0.18.2"
serde_test = "1.0"
temp_testdir = "0.2"
tracing-test = "0.2"

# Enable optimization for insta package.
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
